syntax = "proto3";
package gogolearn;

option go_package = "github.com/lzzzzl/gogo-learn";

// 导入google/api/annotations.proto
import "google/api/annotations.proto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello(HelloRequest) returns (HelloReply) {
        // 这里添加了google.api.http注释
        option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
        };
    }
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
